--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,9 @@ services:
     environment:
       POSTGRES_DB: tracking_spese
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: tracking_spese_2024
+      POSTGRES_PASSWORD: tracking_spese_2025
+    ports:
+      - "5434:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql:ro
@@ -21,16 +23,19 @@ services:
       dockerfile: Dockerfile
     container_name: tracking_spese_api
     restart: unless-stopped
+    ports:
+      - "4000:3001"
     environment:
       NODE_ENV: production
       PORT: 3001
       DB_HOST: postgres
       DB_USER: postgres
-      DB_PASSWORD: tracking_spese_2024
+      DB_PASSWORD: tracking_spese_2025
       DB_NAME: tracking_spese
       DB_PORT: 5432
     depends_on:
       - postgres
+    command: sh -c "sleep 15 && npm start"
     networks:
       - tracking-internal
 
@@ -45,6 +50,21 @@ services:
       NODE_ENV: production
     depends_on:
       - api
+    networks:
+      - tracking-internal
+
+  # Adminer per gestione database
+  adminer:
+    image: adminer:latest
+    container_name: tracking_spese_adminer
+    restart: unless-stopped
+    environment:
+      ADMINER_DEFAULT_SERVER: postgres
+      ADMINER_DESIGN: pepa-linha-dark
+    ports:
+      - "8085:8080"
+    depends_on:
+      - postgres
     networks:
       - tracking-internal
 
