--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       POSTGRES_DB: tracking_spese
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: tracking_spese_2025
+      POSTGRES_PASSWORD: tracking_spese_2024
     ports:
       - "5434:5432"
     volumes:
@@ -15,6 +15,11 @@ services:
       - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql:ro
     networks:
       - tracking-internal
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   # Backend API Node.js
   api:
@@ -28,14 +33,15 @@ services:
     environment:
       NODE_ENV: production
       PORT: 3001
-      DB_HOST: postgres
+      DB_HOST: tracking_spese_db
       DB_USER: postgres
-      DB_PASSWORD: tracking_spese_2025
+      DB_PASSWORD: tracking_spese_2024
       DB_NAME: tracking_spese
       DB_PORT: 5432
     depends_on:
-      - postgres
-    command: sh -c "sleep 15 && npm start"
+      postgres:
+        condition: service_healthy
+    command: sh -c "sleep 5 && npm start"
     networks:
       - tracking-internal
 
@@ -59,7 +65,7 @@ services:
     container_name: tracking_spese_adminer
     restart: unless-stopped
     environment:
-      ADMINER_DEFAULT_SERVER: postgres
+      ADMINER_DEFAULT_SERVER: tracking_spese_db
       ADMINER_DESIGN: pepa-linha-dark
     ports:
       - "8085:8080"
