--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,6 @@ services:
       - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql:ro
     networks:
       - tracking-internal
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
   # Backend API Node.js
   api:
@@ -39,9 +34,8 @@ services:
       DB_NAME: tracking_spese
       DB_PORT: 5432
     depends_on:
-      postgres:
-        condition: service_healthy
-    command: sh -c "sleep 5 && npm start"
+      - postgres
+    command: sh -c "sleep 30 && npm start"
     networks:
       - tracking-internal
 
