--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,11 @@ services:
       - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql:ro
     networks:
       - tracking-internal
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d tracking_spese"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   # Backend API Node.js
   api:
@@ -28,14 +33,14 @@ services:
     environment:
       NODE_ENV: production
       PORT: 3001
-      DB_HOST: tracking_spese_db
+      DB_HOST: postgres
       DB_USER: postgres
       DB_PASSWORD: tracking_spese_2024
       DB_NAME: tracking_spese
       DB_PORT: 5432
     depends_on:
-      - postgres
-    command: sh -c "sleep 30 && npm start"
+      postgres:
+        condition: service_healthy
     networks:
       - tracking-internal
 
@@ -59,12 +64,13 @@ services:
     container_name: tracking_spese_adminer
     restart: unless-stopped
     environment:
-      ADMINER_DEFAULT_SERVER: tracking_spese_db
+      ADMINER_DEFAULT_SERVER: postgres
       ADMINER_DESIGN: pepa-linha-dark
     ports:
       - "8085:8080"
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     networks:
       - tracking-internal
 
