--- a/nginx.conf
+++ b/nginx.conf
@@ -37,6 +37,19 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
+        # Proxy per le chiamate API
+        location /api/ {
+            proxy_pass http://api:3001/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+        }
+
         # Cache per i file statici
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
             expires 1y;
