--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,8 @@ services:
       dockerfile: Dockerfile
     container_name: tracking_spese_frontend
     restart: unless-stopped
+    ports:
+      - "80:80"
     environment:
       NODE_ENV: production
     depends_on:
