--- a/nginx.conf
+++ b/nginx.conf
@@ -39,7 +39,7 @@ http {
 
         # Proxy per le chiamate API
         location /api/ {
-            proxy_pass http://api:3001/;
+            proxy_pass http://api:3001/api/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
