--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,6 @@ services:
       POSTGRES_DB: tracking_spese
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: tracking_spese_2024
-    ports:
-      - "5434:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql:ro
@@ -23,8 +21,6 @@ services:
       dockerfile: Dockerfile
     container_name: tracking_spese_api
     restart: unless-stopped
-    ports:
-      - "4000:3001"
     environment:
       NODE_ENV: production
       PORT: 3001
@@ -52,6 +48,7 @@ services:
       - api
     networks:
       - tracking-internal
+      - web-proxy
 
   # Adminer per gestione database
   adminer:
@@ -75,3 +72,5 @@ volumes:
 networks:
   tracking-internal:
     driver: bridge
+  web-proxy:
+    external: true
