--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       POSTGRES_DB: tracking_spese
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: tracking_spese_2025
+      POSTGRES_PASSWORD: tracking_spese_2024
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql:ro
@@ -19,22 +19,20 @@ services:
     build:
       context: ./api
       dockerfile: Dockerfile
-    container_name: tracking_spese_api
     restart: unless-stopped
     environment:
       NODE_ENV: production
       PORT: 3001
       DB_HOST: postgres
       DB_USER: postgres
-      DB_PASSWORD: tracking_spese_2025
+      DB_PASSWORD: tracking_spese_2024
       DB_NAME: tracking_spese
       DB_PORT: 5432
     depends_on:
-      - postgres
-    command: sh -c "sleep 45 && npm start"
+      - postgres    
     networks:
       - tracking-internal
-
+      
   # Frontend React
   frontend:
     build:
@@ -71,6 +69,5 @@ volumes:
 
 networks:
   tracking-internal:
-    driver: bridge
-  web-proxy:
+    driver: bridge  web-proxy:
     external: true
